fix: prevent overflow with grid display on small screens
By using `minmax`, the overflow disappears on small screens.

--- a/src/style.scss
+++ b/src/style.scss
@@ -75,7 +75,7 @@
 
 		@for $i from 1 through 10 {
 			&.columns-#{$i} {
-				grid-template-columns: repeat(#{$i}, 1fr);
+				grid-template-columns: repeat(#{$i}, minmax(0, 1fr));
 			}
 		}
 	}
